--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -17,7 +17,8 @@ workflows:
           BUNDLE_ID: "io.codemagic.mars.CM-NATIVE-IOS" # <-- Put your Bundle Id here.
           XCODE_SCHEME: "CM_NATIVE_IOS" # <-- Put the name of your scheme here.
           APP_ID: "6473636517"
-        xcode: 15.2
+        xcode: 15.3
+        cocoapods: default
       # triggering:
       #   events:
       #     - push
