--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -19,6 +19,9 @@ workflows:
           APP_ID: "6473636517"
         xcode: 15.3
         cocoapods: default
+      cache:
+        cache_paths:
+          - $HOME/Library/Caches/CocoaPods
       # triggering:
       #   events:
       #     - push
@@ -44,8 +47,6 @@ workflows:
         - name: Build ipa for distribution
           script: |
             xcode-project build-ipa --workspace "$CM_BUILD_DIR/$XCODE_WORKSPACE" --scheme "$XCODE_SCHEME"
-          when:
-            condition: ${{CM_BRANCH}} == 'main'
         - name: Export artifact az zip
           script: |
             cp -r $CM_BUILD_DIR/build/ios/ipa/*.ipa $CM_EXPORT_DIR/artefact
