--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -23,13 +23,14 @@ workflows:
     ios.workflow:
       name: ios_workflow
       instance_type: mac_mini_m2
-      vars:
-          XCODE_WORKSPACE: "CM_NATIVE_IOS.xcworkspace" 
-          BUNDLE_ID: "io.codemagic.mars.CM-NATIVE-IOS" # <-- Put your Bundle Id here.
-          XCODE_SCHEME: "CM_NATIVE_IOS" # <-- Put the name of your scheme here.
-          APP_ID: "6473636517"
-      xcode: 15.3
-      cocoapods: default
+      environment:
+          vars:
+              XCODE_WORKSPACE: "CM_NATIVE_IOS.xcworkspace" 
+              BUNDLE_ID: "io.codemagic.mars.CM-NATIVE-IOS" # <-- Put your Bundle Id here.
+              XCODE_SCHEME: "CM_NATIVE_IOS" # <-- Put the name of your scheme here.
+              APP_ID: "6473636517"
+          xcode: 15.3
+          cocoapods: default
       cache:
         cache_paths:
           - $HOME/Library/Caches/CocoaPods
